src/styles/charts/line.scss
@import "../helpers/_variables.scss";

.chart {

    .masking-rectangle {
        fill: none;
    }

    .x.axis, .y.axis, .y2.axis {
        path, .domain {
            display: block;
            stroke: #ADB0B6;
        }
    }
    .vertical-grid-line, .horizontal-grid-line {
        stroke-dasharray: none;
    }
    .line, .area, .stacked-area {
        stroke-width: 1.5px;
        stroke-linecap: round;
        stroke-linejoin: round;
    }
    .line {
        fill: none;
    }
    .area {
        fill-opacity: 0.5;
    }
    .stacked-area {
        fill-opacity: 0.5;
    }
}

